# example_qt

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  task.pro  widget.ui
